methods.picture.PatternPicture.scala.error
Compilation error:
PatternPicture:22: error: not found: value avance4
      avance4()
      ^PatternPicture:28: error: not found: value avance4
      avance4()
      ^PatternPicture:34: error: not found: value recule4
      recule4()
      ^