methods.picture.PatternPicture.scala.code
def faireV(c:Color,cc:Color){
  setCouleurBrosse(c)
  forward()
  baisseBrosse()
  leveBrosse()
  setCouleurBrosse(cc)
  forward()
  baisseBrosse()
  leveBrosse()
  forward()
  left()
}
override def run() {
  val y=Color.yellow
  val r=Color.red
  val b=Color.blue
  val g=Color.green
      faireV(r,b)
      faireV(b,g)
      faireV(g,y)
      faireV(y,r)
    	avance4()
    	faireV(r,b)
      faireV(b,g)
      faireV(g,y)
      faireV(y,r)
      left()
      avance4()
      right()
      faireV(r,b)
      faireV(b,g)
      faireV(g,y)
      faireV(y,r)
  		recule4()
  		faireV(r,b)
      faireV(b,g)
      faireV(g,y)
      faireV(y,r)
}